# MarkersTask_learningGit

./: CMakeLists.txt  Marker_Application_1.cpp  MarkersParser.cpp  README.md  main.cpp  stdafx.cpp
include_folder/: CMakelists.txt  Marker.h  MarkerManager.h  MarkersParser.h
src/: MarkerManager.cpp  Marker_Application_1.cpp  MarkersParser2.cpp  stdafx.cpp
